All_Component_DX/force-app/main/default/objects/Counter_Rollup__c/fields/Counter_Definition__c.field-meta.xml
<CustomField>
    <fullName>Counter_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field references to the Counter definition for which the rollup is created</description>
    <label>Counter Definition</label>
    <referenceTo>Counter_Details__c</referenceTo>
    <relationshipLabel>Counter Rollups</relationshipLabel>
    <relationshipName>Counter_Rollups</relationshipName>
    <type>Lookup</type>
</CustomField>