All_Component_DX/force-app/main/default/objects/Counter_Rollup__c/fields/Counter_Name__c.field-meta.xml
<CustomField>
    <fullName>Counter_Name__c</fullName>
    <description>This field holds the Name of the Counter definition</description>
    <formula>Counter_Definition__r.Counter_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Counter Name</label>
    <type>Text</type>
</CustomField>