All_Component_DX/force-app/main/default/objects/Counter_Rollup__c/fields/Period_From__c.field-meta.xml
<CustomField>
    <fullName>Period_From__c</fullName>
    <description>This field holds the time since when the Counter readings are considered for roll up.</description>
    <label>Period From</label>
    <type>DateTime</type>
</CustomField>