All_Component_DX/force-app/main/default/objects/Counter_Rollup__c/fields/Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field references to the Service contract for which the roll up is calculated</description>
    <label>Service/Maintenance Contract</label>
    <referenceTo>Service_Contract__c</referenceTo>
    <relationshipLabel>Counter Rollups</relationshipLabel>
    <relationshipName>Counter_Rollups</relationshipName>
    <type>Lookup</type>
</CustomField>