All_Component_DX/force-app/main/default/objects/Counter_Rollup__c/fields/Total_Usage_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Usage_Count__c</fullName>
    <description>The sum of counter-readings for given period across covered IBs for given service-contract is recorded here.</description>
    <label>Line Total</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>